# RayTracing

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
include/: hitable.hpp  hitable_list.hpp  lambertian.hpp  material.hpp  metal.hpp  ray.hpp  sphere.hpp  vec3.hpp
src/: main.cpp  vec3.cpp
